--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,7 @@
         <file>translations/Deezer-Plugin_fr.qm</file>
         <file alias="logo">deezer-logo.png</file>
         <file alias="icon">deezer-icon.png</file>
+        <file>dz.js</file>
+        <file>dz.qml</file>
     </qresource>
 </RCC>
