--- a/config.ui
+++ b/config.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>463</height>
+    <height>488</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -74,13 +74,6 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="testFlashPopup">
-          <property name="text">
-           <string>Test flash</string>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="openConnectPopup">
           <property name="text">
            <string>Open connection popup</string>
@@ -110,6 +103,53 @@
          <bool>true</bool>
         </property>
        </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBoxFlashPlayer">
+     <property name="title">
+      <string>Flash Player</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_5">
+      <item>
+       <widget class="QLabel" name="labelFlashPlayer">
+        <property name="text">
+         <string>Miam Player needs to have Flash Player for Opera or Chromium (PPAPI) in order to stream music from Deezer.</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="testFlashPopup">
+          <property name="text">
+           <string>Click here to check if you can read Flash</string>
+          </property>
+          <property name="icon">
+           <iconset resource="resources.qrc">
+            <normaloff>:/flash-logo</normaloff>:/flash-logo</iconset>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
