--- a/resources.qrc
+++ b/resources.qrc
@@ -6,5 +6,6 @@
         <file alias="deezer-icon">deezer-icon.png</file>
         <file alias="deezer-icon2">deezer-icon2.png</file>
         <file>dz.js</file>
+        <file alias="flash-logo">flash-logo.png</file>
     </qresource>
 </RCC>
